[package]
name = "jetson-network"
version = "0.1.0"
authors = ["noah <nomaxx117@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-tungstenite = "0.2.1"
async-std = {version = "1.4.0", features = ["unstable"] }
futures = "0.3.1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.44"
log = "0.4.8"

[dev-dependencies]
async-log = "2.0.0"
pretty_env_logger = "0.3.1"